# MealQuest

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
presentation/: index.html  script.txt
public/icons/: icon.icns
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ErrorBoundary.tsx  FloatingActionDock.tsx  Navigation.tsx  RecipeVaultPanel.tsx  TopBar.tsx
src/components/dashboard/: DashboardWidgets.tsx  QuickMealLog.tsx  SmartWidgets.tsx
src/components/ui/: Badge.tsx  (+8 more)
src/hooks/: index.ts  useDailyRefresh.ts  useNutritionTracker.ts  useSound.ts
src/pages/: FoodHub.tsx  GroceryPlanner.tsx  MealLog.tsx  MealPlanner.tsx  NutritionAnalytics.tsx  NutritionDashboard.tsx  NutritionGoals.tsx  PantryTracker.tsx  RecipeVault.tsx  SettingsPage.tsx  StreakTracker.tsx  WeeklyReview.tsx  index.ts
src/services/: foodApiService.ts  groceryPredictor.ts  insightEngine.ts  mealSuggestionEngine.ts  notificationScheduler.ts  nutritionEstimator.ts  nutritionScore.ts  soundManager.ts
src/stores/: analyticsStore.ts  badgeStore.ts  groceryStore.ts  index.ts  intelligenceStore.ts  mealLogStore.ts  notificationStore.ts  nutritionStore.ts  pantryStore.ts  plannerStore.ts  questStore.ts  recipeStore.ts  settingsStore.ts  soundStore.ts  streakStore.ts  xpStore.ts
src/types/: index.ts
src/utils/: animations.ts  date.ts  foodDatabase.ts  gamification.ts  index.ts
(+9 files in other folders)
