[package]
name = "mealquest"
version = "1.2.0"
edition = "2021"
description = "MealQuest — Gamified Nutrition Tracker"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
